2003-05-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/ept.c (WriteEPTImage): Fixed writing EPT preview image and
	added logging.
	* PerlMagick/Magick.xs: Fix spelling of 'elevation' argument to
	Shade method.
	* magick/image.c (CloneImage): Don't clone huffman ascii85
	encoding support structure since it is not useful outside of the
	current image context. Cloning a structure via pointer assignment
	causes a memory leak.

2003-05-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/shear.c: Incorporate math tweaks obtained from
	ImageMagick which are purported to improve accuracy when rotating
	and shearing using small angles. Also avoid unneccessarily
	transforming CMYK images into RGB images.
	* magick/paint.c (ColorFloodfillImage): Fix hang while
	floodfilling using a pattern image with color similar to the
	border color.
	* magick/GraphicsMagick-config.in: Added example
	usage to the help output.
	* magick/type.c (GetTypeBlob): Search $MAGICK_HOME for type.mgk.
	* coders/modules.mgk: Add missing mappings for PNG8,
	PNG24, and PNG32.
	* VisualMagick/bin/modules.mgk: Add missing mappings for PNG8,
	PNG24, and PNG32.

2003-05-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c (DllMain): Fix contributed by Achim Domma. For
	a DLL build, update PATH during Magick DLL initialization to
	include the directory where the Magick core DLL resides. This
	allows the loadable modules to find the core DLLs, even if the
	core DLLs are not already in the PATH.

2003-05-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* GraphicsMagick 1.0.1 released.
	* version.sh (PACKAGE_RELEASE_DATE): Update for 1.0.1 release.
	* index.html: Adjust width setting for magick.png.
	* coders/logo.c: Update to use temporary frog logo image
	until official logo image is available.
	* magick/magick_config_api.h.in: Add HasX11 so installed
	xwindow.h works.
	* images: Replace logo images with temporary frog logo image.
