@@ -53,6 +53,15 @@
 </tr>
 </table>
 <p>
+2003-05-28  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/command.c (MogrifyImageCommand): Wrong exception
+        macro was being invoked.  Steps have been taken to ensure that
+        this doesn't happen again.
+
+</UL>
+<p>
 2003-05-26  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
